# task

./: .dockerignore  .env.example  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  tasks.md
apps/authentication/: api.py  api_urls.py  apps.py  forms.py  serializers.py  urls.py  views.py
apps/tasks/: admin.py  api.py  api_urls.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
apps/tasks/migrations/: 0001_initial.py
apps/users/: admin.py  api.py  api_urls.py  forms.py  helpers.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_user_groups_user_is_superuser_user_user_permissions.py
config/: basemodel.py  settings.py  urls.py  views.py
static/css/: auth.css  dashboard.css  style.css
templates/: base.html  dashboard.html
templates/auth/: login.html  register.html
templates/employees/: create.html  detail.html  edit.html  list.html
templates/tasks/: create.html  edit.html  list.html
