[project]
name = "task"
version = "0.1.0"
description = "Django Task applicaiton"
authors = [
    {name = "as.yunusov",email = "asilbek@okmk.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "uvicorn (>=0.49.0,<0.50.0)",
    "django (>=6.0.6,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "whitenoise (>=6.12.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
